src/test/ui/rfc-2632-const-trait-impl/cross-crate.gatednc.stderr
error[E0277]: the trait bound `cross_crate::NonConst: ~const cross_crate::MyTrait` is not satisfied
  --> $DIR/cross-crate.rs:17:5
   |
LL |     NonConst.func();
   |     ^^^^^^^^ ---- required by a bound introduced by this call
   |     |
   |     the trait `~const cross_crate::MyTrait` is not implemented for `cross_crate::NonConst`
   |
note: the trait `cross_crate::MyTrait` is implemented for `cross_crate::NonConst`, but that implementation is not `const`
  --> $DIR/cross-crate.rs:17:5
   |
LL |     NonConst.func();
   |     ^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
